# Zephyr

samples/Projects/Central/src/: main.c
samples/Projects/Peripheral/: CMakeLists.txt
samples/Projects/Peripheral/src/: main.c
samples/Projects/mailbox/: CMakeLists.txt
samples/Projects/skg-ble-sdk/: CMakeLists.txt
samples/Projects/skg-ble-sdk/include/bluetooth/: bluetooth_dap.h  bluetooth_dap_err.h
samples/Projects/skg-ble-sdk/lib/bluetooth_dap/: CMakeLists.txt  VERSION  bluetooth_dap.c  callbacks.h  skg_adv.c  skg_adv.h  skg_char.c  skg_char.h  skg_fsm.c  skg_fsm.h  skg_scan.c  skg_scan.h  version.h.in  wio_uuid.c  wio_uuid.h
samples/Projects/skg-ble-sdk/lib/bluetooth_dap/services/: relay_service.c  services.h  skg_service.c
samples/Projects/skg-ble-sdk/samples/dev_user/: CMakeLists.txt  Kconfig  prj.conf
samples/Projects/skg-ble-sdk/samples/dev_user/include/: bluetooth_dap.h  bluetooth_dap_err.h
samples/Projects/skg-ble-sdk/samples/dev_user/src/: main.c
samples/Projects/skg-ble-sdk/samples/empty/: CMakeLists.txt
samples/Projects/skg-ble-sdk/test/: CMakeLists.txt  main.c  prj.conf  tests_state_machine.c
samples/mailbox/: prj.conf
samples/mailbox/src/: main.c
